cambios en todas las clases menos entrada y ticketek